--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,2 +1,3 @@
 <h1>トップページ</h1>
+<button type="button" class="btn btn-primary">Primary</button>
 <%= render partial: "homes/notification", collection: @notifications %>
